--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "next": "15.4.6",
+    "openai": "^5.12.2",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.1",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^3.4.17"
   }
 }
